# docs/swagger.yaml
@@ -57,9 +57,6 @@ definitions:
     type: object
   handler.CreatePaymentRequest:
     properties:
-      amount:
-        example: 1500.5
-        type: number
       order_id:
         example: ord-123456
         type: string
@@ -761,7 +758,7 @@ paths:
       - BearerAuth: []
       summary: Update user details
       tags:
-      - auth
+      - users
   /admin/users:
     get:
       consumes:
@@ -1517,7 +1514,7 @@ paths:
       - application/json
       description: Create a Phajay payment link for an order
       parameters:
-      - description: Payment details (order_id, amount)
+      - description: Payment details (order_id)
         in: body
         name: request
         required: true
